<resources>

    <string name="app_name">Choose Your Own Adventure!</string>
    <string name="title">Choose Your Own Adventure!</string>
    <string name="start_button">Start!</string>
    <string name="north">Go North</string>
    <string name="south">Go South</string>
    <string name="east">Go East</string>
    <string name="west">Go West</string>
    <string name="image_description">An image of the place in the game.</string>
    <string name="story_text">Story text will go here.</string>
    <string name="an_image_of_the_player">An image of the player.</string>

    <!-- Describing the world to the player:
         The string-array is used to store descriptions of places within the world
         The array must store the same number of columns in each row.
    -->
    <string-array name="row1">
        <item>This is a dead end, you can only return east.</item>
        <item>You are now in a place that has a path leading west, south, and east.</item>
        <item>This is a dead end, you can only return west.</item>
    </string-array>
    <string-array name="row2">
        <item></item>
        <item>You are in a place that has pathways leading north and south.</item>
        <item></item>
    </string-array>
    <string-array name="row3">
        <item>This is a dead end, you can only return east.</item>
        <item>You are now in a place that has a path leading west, north, and east.</item>
        <item>This is a dead end, you can only return west.</item>
    </string-array>

</resources>