<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Game">

    <ImageView
        android:id="@+id/storyImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/r1c1"
        android:contentDescription="@string/image_description" />

    <TextView
        android:id="@+id/storyTextView"
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:text="@string/story_text"
        android:textAlignment="center" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/northBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/north" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/westBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/west" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/eastBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/east" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/southBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/south" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </TableRow>


    </TableLayout>
</LinearLayout>